# Epitech-ZIA

./: CMakeLists.txt  README.md  conanfile.txt
include/: Application.hpp  ConfigLoader.hpp  Core.hpp  ModuleLoader.hpp  NetworkQueue.hpp  ShellInterpreter.hpp  ZiaLibraryInstance.hpp
include/queues/: RequestQueue.hpp  ResponseQueue.hpp
lib/: CMakeLists.txt
lib/HttpModule/: CMakeLists.txt  README.md
lib/HttpModule/include/: HttpModule.hpp
lib/HttpModule/src/: HttpModule.cpp
lib/NetworkModule/: CMakeLists.txt  README.md
lib/NetworkModule/include/: NetworkModule.hpp  Session.hpp  SessionManager.hpp  TCPServer.hpp
lib/NetworkModule/src/: NetworkModule.cpp  Session.cpp  TCPServer.cpp
lib/PhpModule/: CMakeLists.txt  README.md
lib/PhpModule/include/: PhpCgi.hpp  Pipe.hpp
lib/PhpModule/src/: PhpCgi.cpp
lib/ProxyModule/: CMakeLists.txt  README.md
lib/ProxyModule/include/: HttpRequest.hpp  Proxy.hpp
lib/ProxyModule/src/: HttpRequest.cpp  Proxy.cpp
lib/RequestLogModule/: CMakeLists.txt  README.md
lib/RequestLogModule/include/: RequestLogModule.hpp
lib/RequestLogModule/src/: RequestLogModule.cpp
lib/SSLModule/: CMakeLists.txt  README.md
lib/SSLModule/include/: SSLModule.hpp  SSLServer.hpp  Session.hpp  SessionManager.hpp
lib/SSLModule/src/: SSLModule.cpp  SSLServer.cpp  Session.cpp
src/: Application.cpp  ConfigLoader.cpp  Core.cpp  ModuleLoader.cpp  NetworkQueue.cpp  ShellInterpreter.cpp  main.cpp
src/queues/: RequestQueue.cpp  ResponseQueue.cpp
ssl/: dh2048.pem  rootca.crt  rootca.key  rootca.srl  user.crt  user.csr  user.key
tests/: ModuleLoaderTest.cpp
www/: index.php
www/Proxy/: app.py
www/php/: test.php
